--- a/assets/sass/modules/contact.scss
+++ b/assets/sass/modules/contact.scss
@@ -14,7 +14,7 @@
 	left: 0;
 	width: 100%;
 	background-color: $green-1;
-	z-index: 100;
+	z-index: 1002;
 	padding: 2rem;
 	text-align: center;
 }
